Payments overflow fix

--- a/app/styles/common/_wells.scss
+++ b/app/styles/common/_wells.scss
@@ -149,3 +149,7 @@
     text-align: center;
   }
 }
+
+p.no-results {
+  padding: 1em;
+}
